# Nemotron-demo

./: CONTRIBUTING.md  README.md
.github/workflows/: build_docs.yml
docs/: broken_links_false_positives.json  project.json  versions1.json
docs/architecture/: design-philosophy.md
docs/nemo_runspec/: artifacts.md  package-readme.md
docs/nemotron/: artifacts.md  cli.md  wandb.md
docs/nemotron/embed/: README.md
docs/nemotron/nano3/: rl.md
docs/nemotron/super3/: evaluate.md
github/workflows/: claude-review.yml  release-docs.yml
src/nemo_runspec/: __init__.py  artifact_registry.py  artifacts.py  manifest_tracker.py
src/nemo_runspec/packaging/: code_packager.py  self_contained_packager.py
src/nemotron/kit/: README.md  (+1 more)
tests/kit/: test_resolvers_pre_init.py  test_wandb_patch.py
tools/budget/: README.md  client.py  pyproject.toml  serve_v3.sh
tools/budget/custom_logit_processors/v1/: nano_v3_logit_processors.py
usage-cookbook/: README.md
usage-cookbook/Llama-3.1-Nemotron-Safety-Guard-V3/: nim_cookbook.ipynb
usage-cookbook/Llama-Nemotron-Super-49B-v1.5/: nim_tool_calling_cookbook.ipynb  sglang_api_cookbook.ipynb  transformers_api_cookbook.ipynb  trtllm_api_cookbook.ipynb  vllm_api_cookbook.ipynb
usage-cookbook/Nemotron-3-Nano/: sglang_cookbook.ipynb  trtllm_cookbook.ipynb  vllm_cookbook.ipynb
usage-cookbook/Nemotron-3-Super/: sglang_cookbook.ipynb  trtllm_cookbook.ipynb
usage-cookbook/Nemotron-3-Ultra-Base/: README.md
usage-cookbook/Nemotron-Nano-9B-v2/: nim_tool_calling_cookbook.ipynb  transformers_cookbook.ipynb  trtllm_cookbook.ipynb  vllm_cookbook.ipynb
usage-cookbook/Nemotron-Nano2-VL/: README.md  build_general_usage_cookbook.ipynb  vllm_cookbook.ipynb
usage-cookbook/Nemotron-Parse-v1.1/: README.md  build_general_usage_cookbook.ipynb
use-case-examples/Data Science ML Agent/: .gitattributes  README.md  extrapolation.py  user_interface.py
use-case-examples/Intelligent Document Processing with Nemotron RAG/: README.md  intelligent_document_processing_pipeline.ipynb  pyproject.toml
use-case-examples/Nemotron-3-Super-Getting-Started-Guide/: Nemotron-3-Super-Getting-Started-Guide.ipynb
use-case-examples/RAG Agent with Nemotron RAG Models/: RAG Agent with Nemotron RAG Models.ipynb  README.md
use-case-examples/Simple Nemotron-3-Nano Usage Example/: README.md  pyproject.toml  simple_usage_notebook.ipynb
use-case-examples/nemotron-voice-rag-agent-example/: README.md  pyproject.toml  robotics.flac  voice_rag_agent_tutorial.ipynb
use-case-examples/nemotron-voice-rag-agent-example/nemotron_family_multimodal_rag_agent/: __init__.py
use-case-examples/sql-lora-finetuning-and-deployment/: README.md  finetune.py  finetuning_deployment_guide_automodel.ipynb  finetuning_deployment_guide_mbridge.ipynb
(+158 files in other folders)
